# jsk_aerial_robot

aerial_robot_base/scripts/: keyboard_command.py
aerial_robot_control/: CMakeLists.txt
aerial_robot_control/include/aerial_robot_control/control/: under_actuated_impedance_controller.h  under_actuated_tilted_impedance_controller.h
aerial_robot_control/plugins/: flight_control_plugins.xml
aerial_robot_control/src/control/: under_actuated_impedance_controller.cpp  under_actuated_tilted_impedance_controller.cpp  under_actuated_tilted_lqi_controller.cpp
aerial_robot_model/include/aerial_robot_model/model/: aerial_robot_model.h  transformable_aerial_robot_model.h
aerial_robot_model/src/model/base_model/: robot_model.cpp  robot_model_ros.cpp
aerial_robot_model/src/servo_bridge/: servo_bridge.cpp
aerial_robot_nerve/spinal/scripts/: make_libraries.py
aerial_robot_simulation/gazebo_model/world/: empty.world
robots/dragon/scripts/: follow_demo.py
robots/dragon/urdf/: dragon_common.xacro  dragon_link.urdf.xacro
robots/hydrus/: CMakeLists.txt
robots/hydrus/launch/: bringup.launch
robots/hydrus/plugins/: flight_control_plugins.xml
robots/hydrus/scripts/: push_and_slide.py
robots/hydrus/src/: hydrus_impedance_controller.cpp  hydrus_robot_model.cpp  hydrus_tilted_impedance_controller.cpp  hydrus_tilted_robot_model.cpp
robots/hydrus/urdf/: common.xacro  hole.urdf
robots/hydrus_xi/: README.md
robots/hydrus_xi/launch/: bringup.launch
robots/hydrus_xi/scripts/: push_and_slide.py  rod_in_hole.py
robots/hydrus_xi/urdf/: common.xacro  hole.urdf  wall.urdf
robots/mini_quadrotor/: CMakeLists.txt  package.xml
robots/mini_quadrotor/config/: FlightControl.yaml  RobotModel.yaml  Servo.yaml
robots/mini_quadrotor/include/mini_quadrotor/: quad_impedance_controller.h  quad_robot_model.h
robots/mini_quadrotor/launch/: bringup.launch
robots/mini_quadrotor/plugins/: flight_control_plugins.xml  robot_model_plugins.xml
robots/mini_quadrotor/src/: quad_impedance_controller.cpp  quad_robot_model.cpp
robots/mini_quadrotor/urdf/: robot.gazebo.xacro  robotic_arm.urdf.xacro
(+22 files in other folders)
